# RuleMonkey

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml
examples/: CMakeLists.txt  embed.cpp
rulemonkey-archive-2016/rulemonkey-2.0.25/: Makefile.am  Makefile.in  README  bootstrap  configure  configure.ac
rulemonkey-archive-2016/rulemonkey-2.0.25/common/: Makefile.am  Makefile.in  cgraph.c  cgraph.h  color.c  color.h  constants.h  dynarray.c  dynarray.h  dyncolors.c  dyncolors.h  dynconnections.c  dynconnections.h  dynints.c  dynints.h  dynmaps.c  dynmaps.h  dynmolecules.c  dynmolecules.h  dynreport_definition_containers.c  dynreport_definition_containers.h  dynrule_aggregates.c  dynrule_aggregates.h  dynrules.c  dynrules.h  dynspecie_containers.c  dynspecie_containers.h  dynspecies.c  dynspecies.h  dynsymbols.c  dynsymbols.h  fsa.c  fsa.h  ilist.c  ilist.h  llist.c  llist.h  molecule.c  molecule.h  myrand.c  (+21 more)
rulemonkey-archive-2016/rulemonkey-2.0.25/config/: config.h.in
rulemonkey-archive-2016/rulemonkey-2.0.25/dSFMT/: Makefile.am  Makefile.in
rulemonkey-archive-2016/rulemonkey-2.0.25/models/: A+A_mixed_1.bngl  egfr_net.bngl  fceri_ji.bngl  lat.bngl  pltr.bngl  st.bngl  st_multi_1.bngl  stiff.bngl  testcase2b.bngl  tlbr.bngl
rulemonkey-archive-2016/rulemonkey-2.0.25/nauty/: Makefile.am  Makefile.in
rulemonkey-archive-2016/rulemonkey-2.0.25/parser/: Makefile.am  Makefile.in  lexer.c  lexer.l  parser.c  parser.h  parser.y  parser_lib.c  parser_lib.h
rulemonkey-archive-2016/rulemonkey-2.0.25/particlestoc/: Makefile.am  Makefile.in  dynps_reactant_containers.c  dynps_reactant_containers.h  dynps_reaction_containers.c  dynps_reaction_containers.h  dynps_species.c  dynps_species.h  particlestoc.c  particlestoc.h  ps_particle.c  ps_particle.h  ps_reactant_container.c  ps_reactant_container.h  ps_reaction_container.c  ps_reaction_container.h  ps_reaction_definition.c  ps_reaction_definition.h  ps_specie.c  ps_specie.h
rulemonkey-archive-2016/rulemonkey-2.0.25/reactionstoc/: Makefile.am  Makefile.in  reactionstoc.c  reactionstoc.h  rs_reaction_definition.c  rs_reaction_definition.h  rs_specie.c  rs_specie.h  rs_specie_container.c  rs_specie_container.h
rulemonkey-archive-2016/rulemonkey-2.0.25/src/: Makefile.am  Makefile.in  rm_bngl.c
tests/: CMakeLists.txt
tests/cpp/: .clang-tidy  api_coverage_test.cpp  cancellation_test.cpp  canonical_test.cpp  derived_param_model.xml  error_paths_test.cpp  evaluate_expression_test.cpp  expr_eval_test.cpp  function_values_test.cpp  homodimer_rate_test.cpp  negative_rate_clamp_model.bngl  negative_rate_clamp_model.xml  negative_rate_clamp_test.cpp  out_of_order_param_model.xml  parameter_scan_test.cpp  sample_times_test.cpp  save_load_test.cpp  session_sample_times_test.cpp  set_param_test.cpp  smoke_test.cpp  species_enumeration_test.cpp  species_methods_test.cpp  species_order_model.xml  table_function_test.cpp
tests/models/corpus/: AN.bngl  ANx.bngl  ANx_noActivity.bngl  A_plus_A.bngl  A_plus_A_mixed_1.bngl  A_plus_A_mixed_2.bngl  A_plus_B_rings.bngl  BLBR.bngl  CaMKII_holo.bngl  PushPull.bngl  Tutorial_Example.bngl  basicTLBR.bngl  bench_blbr_cooperativity_posner2004.bngl  bench_blbr_cooperativity_posner2004_rings.bngl  bench_blbr_dembo1978.bngl  bench_blbr_dembo1978_monovalent_inhibitor.bngl  bench_blbr_heterogeneity_goldstein1980.bngl  bench_blbr_rings_posner1995_no_rings.bngl  bench_tlbr_solution_macken1982.bngl  bench_tlbr_yang2008.bngl  blbr_rings_posner1995.bngl  e1.bngl  e2.bngl  e3.bngl  e4.bngl  e5.bngl  e6.bngl  e7.bngl  e8.bngl  e9.bngl  egfr_net.bngl  egfr_nf_iter5p12h10.bngl  ensemble.bngl  example2_fit.bngl  example3_fit.bngl  example4_fit.bngl  example6_ground_truth.bngl  fceri_ji.bngl  gene_expr_func.bngl  isingspin_localfcn.bngl  (+30 more)
tests/models/feature_coverage/: .gitignore  COVERAGE.md  EDG_RATIONALE.md  combo_addbond_connected.bngl  combo_exclude_with_complex.bngl  combo_localfcn_multisite.bngl  combo_multimol_unimol.bngl  combo_shorthand_embed.bngl  combo_strict_product_plus.bngl  combo_symmetric_rings.bngl  combo_synth_degrade_equilibrium.bngl  edg_branched_polymer.bngl  edg_compound_op_swap.bngl  edg_deep_param_chain.bngl  edg_double_state_change.bngl  edg_dynamic_rate_zero_obs.bngl  edg_fixed_competition.bngl  edg_homotrimer_binding.bngl  edg_multi_pattern_obs.bngl  edg_oscillator.bngl  edg_pattern_local_fcn.bngl  edg_ring_break_constraint.bngl  edg_seeded_ring.bngl  edg_self_dimerize.bngl  edg_state_increment_chain.bngl  edg_state_wildcard_set.bngl  edg_synth_bind_existing.bngl  edg_synth_bonded_complex.bngl  edg_three_mol_pattern.bngl  edg_time_dependent_rate.bngl  edg_zero_rate_rule.bngl  ft_blbr.bngl  ft_bond_wildcards.bngl  ft_catalytic_unbinding.bngl  ft_clamped_species.bngl  ft_clamped_species_strict.bngl  ft_competitive_binding.bngl  ft_complex_seed.bngl  ft_conditional_rate.bngl  ft_continue.bngl  (+43 more)
tests/models/feature_coverage/reference/: MANIFEST.tsv
tests/models/feature_coverage/xml/: combo_addbond_connected.xml  combo_exclude_with_complex.xml  combo_localfcn_multisite.xml  combo_multimol_unimol.xml  combo_shorthand_embed.xml  combo_strict_product_plus.xml  combo_symmetric_rings.xml  combo_synth_degrade_equilibrium.xml  edg_branched_polymer.xml  edg_compound_op_swap.xml  edg_deep_param_chain.xml  edg_double_state_change.xml  edg_dynamic_rate_zero_obs.xml  ft_blbr.xml  (+64 more)
tests/models/nfsim_basicmodels/: STATUS.tsv  r01.txt  r02.txt  r03.txt  r04.txt  r05.txt  r06.txt  r07.txt  r08.txt  r09.txt  r10.txt  r11.txt  r12.txt  r13.txt  r14.txt  r15.txt  r16.txt  r17.txt  r18.txt  r19.txt  r24.txt  r25.txt  r26.txt  r27.txt  r28.txt  r29.txt  r30.txt  r31.txt  r32.txt  r33.txt  r34.txt  r35.txt  r36.txt  v02.bngl  v03.bngl  v04.bngl  v05.bngl  v06.bngl  v07.bngl  v08.bngl  (+23 more)
tests/reference/basicmodels/: MANIFEST.tsv  PROVENANCE.md  sim_params.tsv
tests/reference/nfsim/: MANIFEST.tsv  PROVENANCE.md  noise_floor.tsv  sim_params.tsv  summary.tsv
tests/reference/rm/: summary.tsv
(+720 files in other folders)
