[project]
name = "rulemonkey-harness"
version = "0.1.0"
description = "Test and benchmarking harness for the RuleMonkey C++ engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.14.0",
  "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests", "harness"]
addopts = "-q"
