[project]
name = "rulemonkey-harness"
version = "3.2.0"
description = "Test and benchmarking harness for the RuleMonkey C++ engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
]

[dependency-groups]
dev = [
  "ruff>=0.14.0",
  "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

# harness/ holds research/diagnostic scripts. Stylistic rules that
# nag scientific Python (single-letter names like `l`/`I`, long
# diagnostic strings, unused tuple-unpack loop vars) are relaxed
# across the directory; correctness rules (F***, E722, etc.) stay
# on. Deferred-adaptation scripts get an additional, broader pass.
[tool.ruff.lint.per-file-ignores]
"harness/*"                             = ["E501", "E741", "B007"]
"harness/ssa/*"                         = ["E501", "E741", "B007", "F841", "UP"]
"harness/basicmodels.py"                = ["E501", "E741", "B007", "F841", "UP", "E722"]
"harness/benchmark_feature_coverage.py" = ["E501", "F841", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
